Fixed content hidden under NavBar

--- a/wearther/src/index.css
+++ b/wearther/src/index.css
@@ -6,14 +6,19 @@ Fonts embedded from Google Fonts:
 'Open Sans' - 300 to 800
 */
 
+/*
 h1, h2 {
-    /* 
     font-family: 'Playfair Display', Helvetica, Arial, sans-serif;
-    */
 }
+*/
 
+/*
 body {
-    /*
     font-family: 'Open Sans', Helvetica, Arial, sans-serif;
-    */
+}
+*/
+
+.custom-sticky-nav {
+    position: sticky;
+    top: 0;
 }
